--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,8 @@ body {
   font-family: 'Roboto' , sans-serif;
   font-weight: 400;
   color: #000000;
+  font-size: 16px;
+  line-height: 1.5;
 }
 /* site header */
 
