--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,12 @@ body {
   justify-content: space-between;
   background: #fff;
 }
+.site-link {
+  transition: opacity 0.4s ease;
+}
+.site-link:hover {
+  opacity: 0.8;
+}
 .site-header-right {
   display: flex;
   align-items: center;
