--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,9 @@ body {
   align-items: center;
   justify-content: space-between;
   background: #fff;
+  border-top: 5px solid #ff7500;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 .logo-link {
   transition: opacity 0.4s ease;
@@ -33,6 +36,7 @@ body {
 
 /* SITENAV */
 .sitenav-list {
+  padding: 0;
   list-style: none;
   display: flex;
 }
@@ -57,6 +61,7 @@ body {
 }
 
 .main-link {
+  display: inline-block;
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -67,6 +72,8 @@ body {
   background: #ff7500;
   text-decoration: none;
   transition: opacity 0.4s ease;
+  padding: 12px 24px;
+  border-radius: 4px;
 }
 .main-link:hover {
   opacity: 0.8;
@@ -81,6 +88,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 .hero-content {
   width: 390px;
@@ -88,11 +97,13 @@ body {
 .hero-img {
   width: 510px;
   height: 510px;
+  border-radius: 8px;
 }
 .orange-line {
   width: 80px;
   height: 3px;
   background: #ff7500;
+  border: none;
 }
 .hero-title {
   font-family: "Roboto Condensed", sans-serif;
@@ -113,6 +124,10 @@ body {
 }
 
 /* FEATURES */
+.features {
+  padding-top: 210px;
+  padding-bottom: 210px;
+}
 .feature {
   width: 340px;
 }
@@ -127,11 +142,16 @@ body {
   color: #000000;
 }
 .features-list {
+  padding: 0;
   display: flex;
   justify-content: space-between;
   list-style: none;
 }
 .features-icon-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
   width: 100px;
   height: 100px;
   background: rgba(255, 117, 0, 0.2);
@@ -156,11 +176,14 @@ body {
 /* PROMO  */
 
 .promo {
+  /* padding-top: 120px;
+  padding-bottom: 160px;   */
   background: #252420;
   color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-radius: 12px;
 }
 .promo-info {
   width: 440px;
@@ -192,12 +215,16 @@ body {
   width: 440px;
   height: 440px;
   object-fit: cover;
+  border-radius: 12px;
 }
 
 /* site-footer */
 
 .site-footer {
   background: #f8f8f8;
+  padding-top: 56px;
+  padding-bottom: 56px;
+
 }
 .social-network {
   display: flex;
@@ -206,18 +233,21 @@ body {
 }
 .site-footer-hr {
   /* width: 1100px; */
+  border: none;
   height: 2px;
   background: rgba(37, 36, 32, 0.5);
 }
 .site-footer-list {
   list-style: none;
   width: 224px;
+  padding: 0;
 }
 
 .site-footer-social-list {
   display: flex;
   align-items: center;
   list-style: none;
+  padding: 0;
 }
 .site-footer-social-list a {
   color: #252420;
