--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,13 @@
 *{
   box-sizing: border-box;
 }
+html {
+  height: 100%;
+}
 body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   color: #000000;
@@ -9,8 +15,12 @@ body {
   line-height: 1.5;
   padding: 0;
   margin: 0;
+  display: flex;
+  flex-direction: column;
 
 }
+
+
 /* CONTAINER */
 .container {
   width: 100%;
@@ -289,7 +299,7 @@ body {
   background: #f8f8f8;
   padding-top: 56px;
   padding-bottom: 56px;
-
+ 
 }
 .social-network {
   display: flex;
